# nomad-parser-eelsdb

./: .gitignore  .pylintrc  AUTHORS  README.md  metadata.yaml  metadata.yml  pyproject.toml  requirements.txt  setup.py
.github/workflows/: python-actions.yaml
eelsdbconverter/: __init__.py  __main__.py  crawl.py  metainfo.py
eelsdbconverter/metainfo/: __init__.py  eels.py
eelsdbparser/: crawl.py  eelsdb_parser.py  metadata.yaml  nomad_plugin.yaml
tests/: test_eelsdbconverter.py  test_eelsdbparser.py  test_parser.py
tests/data/test_1/: metadata.json
tests/data/test_2/: metadata.json
tests/data/test_3/: data.msa  metadata.json
tests/la0-7sr0-3mno3srtio3-001-heterostructure/: data.msa  metadata.json
tests/la0-7sr0-3mno3srtio3-001-heterostructure-brown-millerite-oxygen-vacancie/: data.msa  metadata.json
tests/la0-7sr0-3mno3srtio3-001-heterostructure-oxygen-vacancie/: data.msa  metadata.json
tests/la2nio4-structure-of-k2nif4/: data.msa  metadata.json
tests/o-k-edge-la2nio4-structure-of-k2nif4-tetragonale-i4-mmm/: data.msa  metadata.json
tests/porous-cobalt-coating-with-he-filled-nanopore/: data.msa  metadata.json
tests/porous-cobalt-coating-with-he-filled-nanopores-2/: data.msa  metadata.json
tests/pvd0062/: data.msa  metadata.json
tests/pvd0062-2/: data.msa  metadata.json
tests/ta2o5-amoprhou/: data.msa  metadata.json
