[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = 'eelsdbconverter'
version = '1.0'
description = 'NOMAD converter/parser for metadata from EELS database.'
readme = "README.md"
authors = [{ name = "The NOMAD Authors" }]
license = { file = "LICENSE" }
dependencies = [
    "pandas"
]

[project.urls]
homepage = "https://github.com/nomad-coe/nomad-parser-eelsdb"

[project.optional-dependencies]
tests = [
    'mypy==1.0.1',
    'pylint==2.13.9',
    'pylint_plugin_utils==0.5',
    'pycodestyle==2.8.0',
    'pytest==3.10.0',
    'pytest-timeout==1.4.2',
    'pytest-cov==2.7.1',
    'astroid==2.11.7',
    'typing-extensions==4.4.0'
]

[tool.setuptools.packages.find]
include = ["eelsdbconverter*"]

[tool.setuptools.package-data]
eelsdbconverter = ['metadata.yaml']
